<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_one"
        android:icon="@drawable/andriod"
        android:title="@string/nav_one" />
    <item
        android:id="@+id/nav_two"
        android:icon="@drawable/andriod"
        android:title="@string/nav_two" />
    <item
        android:id="@+id/nav_three"
        android:icon="@drawable/andriod"
        android:title="@string/nav_three" />
    <item
        android:id="@+id/nav_four"
        android:icon="@drawable/andriod"
        android:title="@string/nav_four" />
    <item
        android:id="@+id/nav_five"
        android:icon="@drawable/andriod"
        android:title="@string/nav_five" />
</menu>